reviewboard/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          resources:
            requests:
              cpu: 200m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          ports:
            - name: nginx
              containerPort: 80
          volumeMounts:
          - name: nginx-config
            mountPath: /etc/nginx/conf.d/default.conf
            readOnly: true
            subPath: default.conf
          - name: rb-data
            mountPath: /var/www/reviewboard
      volumes:
      - name: nginx-config
        configMap:
          name: nginx
      - name: rb-data
        persistentVolumeClaim:
          claimName: rb-data-pvc
