reviewboard/memcached-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: memcached-service
  labels:
    app: memcached
spec:
  type: ClusterIP
  selector:
    app: memcached
  ports:
  - protocol: TCP
    port: 11211
    targetPort: 11211
